Fixed the spacing between the image and h1 and buttons

--- a/css/index.css
+++ b/css/index.css
@@ -346,7 +346,11 @@ footer nav a {
     /* width: 10px;
     height: 15px; */
     border: 2px solid black;
-    margin-bottom: 10px;
+    margin-top: 20px;
+}
+
+.card-header {
+    margin: 20px 0;
 }
 
 
@@ -361,7 +365,7 @@ footer nav a {
 }
 
 .work-together {
-    padding: 20px 0;
+    margin: 20px 0;
 }
 
 
